--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://hirundo-tech.github.io/hirundo-tech.github.io",
+  "homepage": "https://hirundo-tech.github.io/hirundo-tech",
   "name": "hirundo",
   "private": true,
   "version": "0.0.0",
